[BUGFIX] Avoid horizontal scroll bar with frameless image

--- a/Resources/Public/Scss/ThemeMain/Elements/_various.scss
+++ b/Resources/Public/Scss/ThemeMain/Elements/_various.scss
@@ -34,3 +34,10 @@ figure.image {
 .pp-modal-dialog .modal-body {
   overflow-x: hidden;
 }
+
+//
+// Avoid horizontal scroll bar when using image without frame
+//
+body {
+  overflow-x: hidden;
+}
